// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-1921uc5-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-o6qg0g-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render borderLeft 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-i25gtk-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-o6qg0g-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render borderRight 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-1pd05xm-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-o6qg0g-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render borderTop 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-y3blhg-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-o6qg0g-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
}

<div>
  <div
    class="components-surface emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
</div>
`;

exports[`props should render variants 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-15um7qp-PolymorphicDiv-Surface-getBorders-secondary e19lxcc00"
+     class="components-surface css-o6qg0g-PolymorphicDiv-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;
